more build tweaks

--- a/build.xml
+++ b/build.xml
@@ -25,8 +25,8 @@
 
 	<!-- Run PHP CodeStyle on the entire codebase and generate a checkstyle formatted report. -->	
 	<target name="phpcs">
-		<exec dir="." executable="phpcs" failonerror="false" output="target/docs/checkstyle.xml">
-			<arg line="--report=checkstyle ."/>
+		<exec dir="." executable="phpcs" failonerror="true" output="target/docs/checkstyle.xml">
+			<arg line="--report=checkstyle --error-severity=4 ."/>
 		</exec>
 	</target>
 	
